nephthys (1.5)

  * bug, quoting of input data works now correct (#113)

 -- Andreas Unterkircher <unki@netshadow.at>  Sat, 2 Dec 2008 09:59:42 +0100

nephthys (1.4)

  * bug, user-last-logon information gets now updated during login (#91)
  * bug, do not remove bucket from database, if bucket-deletion in
      filesystem failed (#93)
  * bug, use relative font-size instead of fixed (#92)
  * bug, make Exceptions better readable in browser-view (#100)
  * feature, show user-privileges in user-management overview (#94)
  * feature, set default language via user-management (#57)
  * feature, nephthys_watch.php is now quiet per default
      but support verbose-mode via -v command line option (#90)
  * feature, config-option to force auto-created users to update
      their profiles during first login (#87)
  * feature, notify owner when bucket has expired (#96)
  * feature, sort columns (#37)

 -- Andreas Unterkircher <unki@netshadow.at>  Sat, 8 Nov 2008 09:59:42 +0100

nephthys (1.3)

  * feature, russian translation (#2)
       contributed by Alexander Davidenko
  * feature, italian translation (#75)
       contributed by Alberto Vincenzi
  * feature, spanish translation (#77)
       contributed by Juan Pablo
  * feature, dutch translation (#82)
       contributed by Gijs van Gemert
  * feature, fullname for address-book contacts (#50)
  * feature, auto-suggest for multiple receivers (#69)
  * feature, deny user-password-change flag (#71)
  * feature, confirmation dialog is now shown after clicking "notify" (#49)
  * feature, permit input-format "fullname <email-address" as receiver
       address, to be auto-inserted into the address-book (#83)

 -- Andreas Unterkircher <unki@netshadow.at>  Sat, 11 Oct 2008 09:59:42 +0200

nephthys (1.2)

  * feature, new privilege for long-time buckets (#41)
  * feature, support for mutli-language (#1)
  * feature, german translation (#42)
  * feature, expirining date now also showes up in notification email (#48)