@@ -3,6 +3,12 @@
  * MySQL interface has changed to mysqli.
    See http://oss.netshadow.at/wiki/nephthys/ChangingToMySqli for more.
 
+ * The directory for the location of the template engine cache
+   directories is now configureable via the $tmpl_path variable.
+   If this one has not been set in nephthys_cfg.php, it defaults
+   to $base_path. So this should not require any change when you do
+   a upgrade from a previous version. Just to let you know.
+
 == Upgrading to 1.4 ==
 
  * Nothing special needs to be done.
